2016-08-15 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-515

	* src/m_rt4.cc (RT4Calc): non-RT4 build fix.

2016-08-15 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-514

	* src/m_rt4.cc, methods.cc (RT4Calc), rt4.cc, rt4.h (sca_optpropCalc):
	Continue on RT4 interface implementation: preparation of scattering
	matrix data for RT4.

	* src/disort.cc, disort.h: Cosmetics.

	* 3rdparty/polradtran/rt4/radmat.f:
	Avoid redefining blas/lapack functions idamax and dscal.

2016-08-10  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-513

	* src/m_rt4.cc:

	(RT4Calc, RT4Test):

	Throw a runtime error in non-rt4 builds.

	(RT4Calc):

	Fix arguments in function declaration for non-rt4 build to match rt4
	build.

	* src/rt4.h:

	Ignore everything in here for non-rt4 build.
	Note: Functions should never be _implemented_ in the header file.
	Could otherwise lead to duplicate symbols error from linker (function
	ends up in more than one object file).

	* src/rt4.cc: Ignore everything in here in non-rt4 build.

2016-08-09 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-512

	* src/rt4.h:
	Return to previous version. Plus a correction. However, RT4-disbaled
	build still fails :-/ Oliver?

	* src/disort.cc: Error message correction.

2016-08-09 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-511

	* src/rt4.h:
	Reorganized the ifdef ENABLE_RT4 loops in the hope that hudson likes
	that better...

2016-08-09 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-510

	* src/m_rt4.cc, methods.cc (RT4Calc, RT4Init),
	workspace.cc (rt4_is_initialized):
	Work in progress: Implementation of RT4 solver interface.

	* src/rt4.cc, rt4.h:
	Added. Methods for RT4 input preparation etc. RT4Test contents moved here.

	* src/CMakeLists.txt: rt4.cc added to library list.

	* src/disort.cc, m_disort.cc: Cosmetics.

2016-08-08  Lukas Kluft  <lukas.kluft@gmail.com>

	* arts-2-3-509

	* controlfiles/instruments/metmm/common_metmm.arts:
